Notes/wxWidgets/configure tests.txt
Directory structure to copy to Windows MSys2
~/devel/version_control
~/devel/source_code

Create target wxBeta on MSys2 wx-config project using folder wxMSW3.1.x/src/msw
Then, add files that are needed for wxCmdLineParser and wxExecute.
#
Check that it works with wxWidgets 3.0 and 3.1.
Think about checking with wxWidgets 2.8.
Think about checking with wxQT 3.1.
Think about checking with wxGTK 3.1.


#$  git checkout master && git fetch upstream && git rebase upstream/master


git checkout master && git fetch && git status -uno



## Verify that option "--disable-precomp-headers" works
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --disable-precomp-headers && make && cd samples && make
# It worked!


## Verify that option "--enable-monolithic" and "--disable-shared" works
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --enable-monolithic --disable-shared && make && cd samples && make




## Verify that wxQT builds samples
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_qt_test && cd build_qt_test && make clean && \
../configure --with-qt && make && cd samples && make



## Verify that option "--enable-compat28" and "--disable-precomp-headers" builds
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_compat28_test && cd build_compat28_test && make clean && \
../configure --enable-compat28 --disable-precomp-headers && make && cd samples && make



### option "--without-subdirs" added to speed up the tests below.



## Verify that option "--disable-precomp-headers" works with wxQT builds
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_qt_test && cd build_qt_test && make clean && \
../configure --with-qt --disable-precomp-headers --without-subdirs && make
# It worked!



## Verify that option "--enable-universal"
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --enable-universal --without-subdirs && make
#
#!!! Universal build FAILS on Linux!!!
In file included from ../src/gtk/webview_webkit.cpp:16:0:
../include/wx/gtk/control.h:20:24: error: redefinition of ‘class wxControl’
 class WXDLLIMPEXP_CORE wxControl : public wxControlBase
                        ^
In file included from ../include/wx/control.h:205:0,
                 from ../include/wx/statusbr.h:18,
                 from ../include/wx/frame.h:19,
                 from ../include/wx/wx.h:42,
                 from ../include/wx/wxprec.h:42:
../include/wx/univ/control.h:40:24: error: previous definition of ‘class wxControl’
 class WXDLLIMPEXP_CORE wxControl : public wxControlBase, public wxInputConsumer
                        ^
../src/gtk/webview_webkit.cpp: In member function ‘virtual bool wxWebViewWebKit::Create(wxWindow*, wxWindowID, const wxString&, const wxPoint&, const wxSize&, long int, const wxString&)’:
../src/gtk/webview_webkit.cpp:493:22: error: no matching function for call to ‘wxWebViewWebKit::PostCreation(const wxSize&)’
     PostCreation(size);
                      ^
In file included from ../include/wx/window.h:1943:0,
                 from ../include/wx/wx.h:38,
                 from ../include/wx/wxprec.h:42:
../include/wx/gtk/window.h:147:10: note: candidate: void wxWindowGTK::PostCreation()
     void PostCreation();
          ^
../include/wx/gtk/window.h:147:10: note:   candidate expects 0 arguments, 1 provided
../src/gtk/webview_webkit.cpp: In static member function ‘static wxVisualAttributes wxWebViewWebKit::GetClassDefaultAttributes(wxWindowVariant)’:
../src/gtk/webview_webkit.cpp:1069:68: error: ‘GetDefaultAttributesFromGTKWidget’ was not declared in this scope
      return GetDefaultAttributesFromGTKWidget(webkit_web_view_new());
##

## Check the configure.in files for proper "WX_ARG_FEATURE" usage.
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --disable-all-features --enable-universal --without-subdirs && make
#
#!!! Universal disable-all-features build FAILS on Linux!!!
../src/univ/anybutton.cpp:31:6: error: ‘wxAnyButton’ has not been declared
 void wxAnyButton::Press()
##


## Check the configure.in files for proper "WX_ARG_FEATURE" usage.
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --disable-all-features --enable-controls --without-subdirs && make
#
# might be missing an "USES_CONTROLS=1" in configure.in
# Error below happens unless option "--enable-controls" is used.
../src/generic/renderg.cpp: In member function ‘virtual void wxRendererGeneric::DrawItemText(wxWindow*, wxDC&, const wxString&, const wxRect&, int, int, wxEllipsizeMode)’:
../src/generic/renderg.cpp:957:32: error: incomplete type ‘wxControl’ used in nested name specifier
     const wxString paintText = wxControl::Ellipsize(text, dc,


## Verify an non GUI build works.
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --disable-gui --without-subdirs && make
# This worked on Linux!


########################################################################
##  MSys2 and CygWin Testing below this point.

######
##
## Verify that option "--disable-precomp-headers" works with wxMSW
cd ~/devel/version_control/wxWidgets-git && \
mkdir -p build_test && cd build_test && make clean && \
../configure --with-msw --disable-precomp-headers && make && cd samples && make


######
##
##  !!!Testing with multiple patches applied!!!
##
#   cd ~/devel/wxWidgets-git && git checkout build/cfg_fixes && git status
cd ~/devel/wxWidgets-git && git status -uno && \
mkdir -p build_test && cd build_test && make clean && \
../configure --with-msw --without-subdirs --disable-all-features \
    --enable-controls --enable-menus && make

##
#  Errors stopped with option "--enable-menus"
#  Errors changed with option "--enable-universal"
#  Errors with "--enable-menus" removed
../src/msw/toplevel.cpp: In member function 'virtual WXLRESULT wxTopLevelWindowMSW::MSWWindowProc(WXUINT, WXWPARAM, WXLPARAM)':
../src/msw/toplevel.cpp:312:38: error: invalid use of incomplete type 'class wxMenu'
                     if ( m_menuSystem->MSWCommand(0 /* unused anyhow */, id) )
                                      ^
In file included from ../include/wx/window.h:18:0,
                 from ../include/wx/msw/private.h:21,
                 from ../include/wx/wxprec.h:33:
../include/wx/event.h:51:32: note: forward declaration of 'class wxMenu'
     class WXDLLIMPEXP_FWD_CORE wxMenu;
                                ^
../src/msw/toplevel.cpp: In destructor 'virtual wxTopLevelWindowMSW::~wxTopLevelWindowMSW()':
../src/msw/toplevel.cpp:509:12: warning: possible problem detected in invocation of delete operator: [-Wdelete-incomplete]
     delete m_menuSystem;
            ^
../src/msw/toplevel.cpp:509:12: warning: invalid use of incomplete type 'class wxMenu'
In file included from ../include/wx/window.h:18:0,
                 from ../include/wx/msw/private.h:21,
                 from ../include/wx/wxprec.h:33:
../include/wx/event.h:51:32: note: forward declaration of 'class wxMenu'
     class WXDLLIMPEXP_FWD_CORE wxMenu;
                                ^
../src/msw/toplevel.cpp:509:12: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined
     delete m_menuSystem;
            ^
../src/msw/toplevel.cpp: In member function 'wxMenu* wxTopLevelWindowMSW::MSWGetSystemMenu() const':
../src/msw/toplevel.cpp:1121:30: error: incomplete type 'wxMenu' used in nested name specifier
         self->m_menuSystem = wxMenu::MSWNewFromHMENU(hmenu);
                              ^
../src/msw/toplevel.cpp:1132:21: error: invalid use of incomplete type 'class wxMenu'
         m_menuSystem->SetInvokingWindow(self);
                     ^
In file included from ../include/wx/window.h:18:0,
                 from ../include/wx/msw/private.h:21,
                 from ../include/wx/wxprec.h:33:
../include/wx/event.h:51:32: note: forward declaration of 'class wxMenu'
     class WXDLLIMPEXP_FWD_CORE wxMenu;
#
##
#  Errors with "--disable-dbghelp" removed
In file included from ../include/wx/chkconf.h:1244:0,
                 from ../include/wx/platform.h:485,
                 from ../include/wx/defs.h:20,
                 from ../include/wx/wxprec.h:12:
../include/wx/msw/chkconf.h:302:13: error: #error "wxUSE_DBGHELP requires wxUSE_DYNLIB_CLASS"
 #           error "wxUSE_DBGHELP requires wxUSE_DYNLIB_CLASS"
#
##
######
